font-awesome追加・アイコン使用
font-awesomeを使用可能にするためにhead部分にlinkを追加
Headerに表示している名前の下にFacebookとGitHubのURLとアイコンを追加

--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- font-awesomeを使用可能にする -->
+    <link href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" rel="stylesheet">
     <title>30DAYSトライアル（My Portfolio）</title>
     
 </head>
 <body>
+    <!-- 名前＆SNS -->
     <header>
         <div class="container">
             <div class="icon">
@@ -16,21 +19,26 @@
             </div>
             
             <div class="info">
-                <h1>Enomoto Teruaki</h1>
+                <h1>Teru-Eno</h1>
                 <p>プログラマの卵</p>
+                <!-- Icons -->
+                    <ul class="icons">
+                        <a href="https://www.facebook.com/teruaki.enomoto.7"><i class="fab fa-facebook-square fa-2x"></i></a>
+                        <a href="https://github.com/TeruEno"><i class="fab fa-github-square fa-2x"></i></a>
+                    </ul>
             </div>
         </div>
     </header>
-
+    <!-- 成果物紹介 -->
     <section class="works">
         <h1>成果物</h1>
-        <ul>
+        <div>
             <div class="appIcon">
                 <img src="img/ThoughtsToPonder.png" width="90" height="90" alt="sampleProjectの画像">
             </div>
             <h2>Thoughts to Ponder（作成中）</h2>
             <p>メンタルケア用のiOSアプリケーション</p>
-        </ul>
+        </div>
     </section>
 
     <footer>
