アイコンの配色
Header部分に表示しているFacebookとGitHubのアイコンの色をそれぞれ青色と黒色に変更

--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
             <div class="info">
                 <h1>Teru-Eno</h1>
                 <p>プログラマの卵</p>
-                <!-- Icons -->
+                <!-- アイコン -->
                     <ul class="icons">
+                        <!-- Facebook -->
                         <a href="https://www.facebook.com/teruaki.enomoto.7"><i class="fab fa-facebook-square fa-2x"></i></a>
+                        <!-- GitHub -->
                         <a href="https://github.com/TeruEno"><i class="fab fa-github-square fa-2x"></i></a>
                     </ul>
             </div>
