スキル一覧追加
使用している言語
使用しているエディター
その他使用しているソフトウェア

--- a/index.html
+++ b/index.html
@@ -43,6 +43,37 @@
         </div>
     </section>
 
+    <section class="skills">
+        <h1>スキル一覧</h1>
+        <div class="skillList">
+            <h2>プログラミング言語</h2>
+            <ul class="languages">
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>PHP</li>
+                <li>Swift</li>
+            </ul>
+
+            <h2>エディター</h2>
+            <ul class="editors">
+                <li>VisualStudioCode</li>
+                <li>Xcode</li>
+            </ul>
+
+            <h2>その他</h2>
+            <ul class="others">
+                <li>Git</li>
+                <li>GitHub</li>
+                <li>Slack</li>
+                <li>Trello</li>
+                <li>Adobe</li>
+                <li>Sourcetree</li>
+                <li>Vim</li>
+                <li>iTerm2</li>
+            </ul>
+        </div>
+    </section>
+
     <footer>
 
     </footer>
